# ai-agent-school

./: .gitignore  README.md
agent-ecosystem/: README.md
agent-evals/: README.md
agent-evals/trajectory-evaluator/: README.md  reference_outputs.py  trajectory-eval.py
agent-reference-arch/: README.md
doc-templates/: agent-design-spec-sample.md  agent-design-spec.md  agent-tech-spec.md  agentic-workflow-design-spec.md
hello-world-agents/reflective-research-agent/: README.md
learning-resources/: README.md
multi-agent-samples/crewai/code-reviewers/: pyproject.toml
multi-agent-samples/langgraph/: .env.example  .gitignore  README.md  pyproject.toml
multi-agent-samples/nemo/: stock_analyzer.ipynb
multi-agents/code-reviewers/: README.md
multi-agents/code-reviewers/src/config/: tasks.yaml
simple-agents/: code_reflection_agent.ipynb
simple-agents/reflective-chartgen-agent/: chartgen-agent.py
temp-to-be-deleted/multi-agents/code-reviewers/: README.md
temp-to-be-deleted/multi-agents/code-reviewers/src/: crew.py  main.py
temp-to-be-deleted/multi-agents/code-reviewers/src/config/: agents.yaml
temp-to-be-deleted/multi-agents/code-reviewers/src/test/: code_changes.txt
